--- a/index.html
+++ b/index.html
@@ -5,56 +5,96 @@
     <title>wiitown v0</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            font-family: 'Tahoma', Arial, sans-serif;
+            background: linear-gradient(to right, #a1c4fd, #c2e9fb); /* Cute blue gradient */
             color: #333;
+            margin: 0;
+            padding: 0;
         }
         .container {
             width: 90%;
             margin: 0 auto;
-            padding: 10px;
-            background-color: #fff;
+            padding: 20px;
+            background-color: #FFFFFF;
             border: 1px solid #ccc;
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
         }
-        h1, .logo {
+        .header {
             text-align: center;
-        }
-        p {
-            text-align: justify;
+            padding: 20px 0;
+            background: linear-gradient(to right, #a1c4fd, #c2e9fb); /* Cute blue gradient */
+            position: relative;
         }
         .logo {
-            font-size: 48px;
-            color: #ADD8E6; /* Light blue color */
-            font-weight: bold;
-            text-transform: lowercase;
-        }
-        .city-clouds {
             display: block;
             margin: 0 auto;
             width: 200px; /* Adjust the size as needed */
         }
-        footer {
-            text-align: center;
-            margin-top: 20px;
+        .navbar {
+            margin-top: 10px;
         }
-        footer a {
-            color: #ADD8E6; /* Light blue color */
+        .navbar a {
+            color: #FFFFFF;
             text-decoration: none;
+            margin: 0 10px;
+            font-size: 18px;
         }
-        footer a:hover {
+        .navbar a:hover {
             text-decoration: underline;
+        }
+        .marquee-container {
+            width: 100%;
+            background-color: transparent;
+            overflow: hidden;
+            box-sizing: border-box;
+            position: absolute;
+            bottom: 0;
+        }
+        .marquee {
+            display: inline-block;
+            white-space: nowrap;
+            animation: marquee 5s linear infinite; /* Speed up the animation */
+            color: #FFFFFF;
+        }
+        @keyframes marquee {
+            0% { transform: translateX(100%); }
+            100% { transform: translateX(-100%); }
+        }
+        .city-clouds {
+            display: block;
+            margin: 20px auto;
+            width: 150px; /* Adjust the size as needed */
+        }
+        h1 {
+            text-align: center;
+            color: #00BFFF;
+            font-size: 36px;
+        }
+        p {
+            text-align: justify;
+            font-size: 18px;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="logo">wiitown</div>
-        <img class="city-clouds" src="wiitown.png" alt="city on clouds (wiitown logo)">
-        <h1>welcome to wiitown v0</h1>
-        <p>this website is a proof of concept to try programming and running a wii-comp. website in 2024.</p>
+    <div class="header">
+        <img class="logo" src="logo.png" alt="wiitown logo">
+        <div class="navbar">
+            <a href="index.html">HOME</a> |
+            <a href="about.html">ABOUT</a> |
+            <a href="services.html">SERVICES</a> |
+            <a href="contact.html">CONTACT</a>
+        </div>
     </div>
-    <footer>
-        <p><a href="http://www.wii.com" target="_blank">Visit wii.com</a></p>
-    </footer>
+    <div class="container">
+        <img class="city-clouds" src="wiitown.png" alt="wiitown clouds">
+        <h1>powered by monster energy and a idea</h1>
+        <p>this website is a proof of concept to try programming a wii-compatible website in 2024.</p>
+    </div>
+    <div class="marquee-container">
+        <div class="marquee">
+            <p>hi :3</p>
+        </div>
+    </div>
 </body>
 </html>
