--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
         .city-clouds {
             display: block;
             margin: 20px auto;
-            width: 150px; /* Adjust the size as needed */
+            width: 500px; /* Optimal width for Wii display */
+            max-width: 90%; /* Ensure responsiveness */
+            height: auto; /* Maintain aspect ratio */
         }
         h1 {
             text-align: center;
@@ -87,9 +89,9 @@
         </div>
     </div>
     <div class="container">
-        <img class="city-clouds" src="wiitown.png" alt="wiitown clouds">
-        <h1>powered by monster energy and a idea</h1>
-        <p>this website is a proof of concept to try programming a wii-compatible website in 2024.</p>
+        <img class="city-clouds" src="city-on-clouds.png" alt="City on Clouds">
+        <h1>welcome to wiitown v0</h1>
+        <p>this website is a proof of concept to try programming and running a wii-compatible website in 2024.</p>
     </div>
     <div class="marquee-container">
         <div class="marquee">
