--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
     </div>
     <div class="container">
-        <img class="city-clouds" src="city-on-clouds.png" alt="City on Clouds">
+        <img class="city-clouds" src="wiitown.png" alt="wiitown clouds illust.">
         <h1>welcome to wiitown v0</h1>
         <p>this website is a proof of concept to try programming and running a wii-compatible website in 2024.</p>
     </div>
