--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
         .city-clouds {
             display: block;
             margin: 20px auto;
-            width: 500px; /* Optimal width for Wii display */
-            max-width: 90%; /* Ensure responsiveness */
-            height: auto; /* Maintain aspect ratio */
+            width: 150px; /* Adjust the size as needed */
         }
         h1 {
             text-align: center;
@@ -89,8 +87,8 @@
         </div>
     </div>
     <div class="container">
-        <img class="city-clouds" src="wiitown.png" alt="wiitown clouds illust.">
-        <h1>welcome to wiitown v0</h1>
+        <img class="city-clouds" src="wiitown.png" alt="wiitown clouds">
+        <h1>howdy !!</h1>
         <p>this website is a proof of concept to try programming and running a wii-compatible website in 2024.</p>
     </div>
     <div class="marquee-container">
