--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <style>
         body {
             font-family: 'Tahoma', Arial, sans-serif;
-            background: linear-gradient(to right, #a1c4fd, #c2e9fb); /* Cute blue gradient */
+            background: url('gradient-background.png') no-repeat center center fixed; /* Gradient image as background */
+            background-size: cover;
             color: #333;
             margin: 0;
             padding: 0;
@@ -22,7 +23,7 @@
         .header {
             text-align: center;
             padding: 20px 0;
-            background: linear-gradient(to right, #a1c4fd, #c2e9fb); /* Cute blue gradient */
+            background-color: transparent; /* Make header background transparent to show gradient */
             position: relative;
         }
         .logo {
@@ -87,8 +88,8 @@
         </div>
     </div>
     <div class="container">
-        <img class="city-clouds" src="wiitown.png" alt="wiitown clouds">
-        <h1>howdy !!</h1>
+        <img class="city-clouds" src="city-on-clouds.png" alt="City on Clouds">
+        <h1>welcome to wiitown v0</h1>
         <p>this website is a proof of concept to try programming and running a wii-compatible website in 2024.</p>
     </div>
     <div class="marquee-container">
