--- a/index.html
+++ b/index.html
@@ -43,24 +43,6 @@
         .navbar a:hover {
             text-decoration: underline;
         }
-        .marquee-container {
-            width: 100%;
-            background-color: transparent;
-            overflow: hidden;
-            box-sizing: border-box;
-            position: absolute;
-            bottom: 0;
-        }
-        .marquee {
-            display: inline-block;
-            white-space: nowrap;
-            animation: marquee 5s linear infinite; /* Speed up the animation */
-            color: #FFFFFF;
-        }
-        @keyframes marquee {
-            0% { transform: translateX(100%); }
-            100% { transform: translateX(-100%); }
-        }
         h1 {
             text-align: center;
             color: #00BFFF;
@@ -70,26 +52,35 @@
             text-align: justify;
             font-size: 18px;
         }
+        .marquee-container {
+            width: 100%;
+            background-color: transparent;
+            overflow: hidden;
+            box-sizing: border-box;
+            position: absolute;
+            bottom: 0;
+        }
+        .marquee {
+            color: #FFFFFF;
+        }
     </style>
 </head>
 <body>
     <div class="header">
         <img class="logo" src="logo.png" alt="wiitown logo">
         <div class="navbar">
-            <a href="index.html">HOME</a> |
-            <a href="about.html">ABOUT</a> |
-            <a href="services.html">SERVICES</a> |
-            <a href="contact.html">CONTACT</a>
+            <a href="index.html">home</a> |
+            <a href="about.html">about</a> |
+            <a href="services.html">services</a> |
+            <a href="contact.html">contact</a>
         </div>
     </div>
     <div class="container">
-        <h1>welcome to wiitown v0</h1>
+        <h1>v0 - prog. by HuxP</h1>
         <p>this website is a proof of concept to try programming and running a wii-compatible website in 2024.</p>
     </div>
     <div class="marquee-container">
-        <div class="marquee">
-            <p>hi :3</p>
-        </div>
+        <marquee class="marquee" behavior="scroll" direction="left" scrollamount="5">hi :3</marquee>
     </div>
 </body>
 </html>
