--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>wiitown v0</title>
+    <title>home | wiitown</title>
     <style>
         body {
             font-family: 'Tahoma', Arial, sans-serif;
@@ -76,7 +76,7 @@
         </div>
     </div>
     <div class="container">
-        <h1>v0 - prog. by HuxP</h1>
+        <h1>home - last updated 16.6.2024</h1>
         <p>this website is a proof of concept to try programming and running a wii-compatible website in 2024.</p>
     </div>
     <div class="marquee-container">
