--- a/contact.html
+++ b/contact.html
@@ -83,15 +83,15 @@
         </div>
     </div>
     <div class="container">
-        <h1>Contact Us</h1>
+        <h1>contact</h1>
         <div class="contact-info">
-            <p>Email: wiitown39@gmail.com</p>
-            <p>GitHub: <a href="https://github.com/wiitown" target="_blank">wiitown</a></p>
+            <p>email: wiitown39@gmail.com</p>
+            <p>github: <a href="https://github.com/wiitown" target="_blank">wiitown</a></p>
         </div>
         <p>this website is a proof of concept to try programming and running a wii-compatible website in 2024.</p>
     </div>
     <div class="marquee-container">
-        <marquee class="marquee" behavior="scroll" direction="left" scrollamount="5">© 2007 Nintendo. ™, ® & the Wii logo are trademarks of Nintendo.</marquee>
+        <marquee class="marquee" behavior="scroll" direction="left" scrollamount="5">hi :3</marquee>
     </div>
 </body>
 </html>
