--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
             <p>email: wiitown39@gmail.com</p>
             <p>github: <a href="https://github.com/wiitown" target="_blank">wiitown</a></p>
         </div>
-        <p>this website is a proof of concept to try programming and running a wii-compatible website in 2024.</p>
+        <p>The wiitown website is a fan project and is not affiliated with or endorsed by Nintendo. All trademarks, service marks, trade names, trade dress, product names, and logos appearing on the site are the property of their respective owners, including the Wii name, logo, and any related images or content. All rights to these materials are reserved by their respective owners.</p>
     </div>
     <div class="marquee-container">
         <marquee class="marquee" behavior="scroll" direction="left" scrollamount="5">hi :3</marquee>
