--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>home | wiitown</title>
+    <title>Home - Wiitown</title>
     <style>
         body {
             font-family: 'Tahoma', Arial, sans-serif;
