--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         </div>
     </div>
     <div class="container">
-        <h1>home - last updated 16.6.2024</h1>
-        <p>this website is a proof of concept to try programming and running a wii-compatible website in 2024.</p>
+        <h1>Home - Last updated 24.9.24</h1>
+        <p>This project has slowed down quite a bit, sorry y'all! I'm just kind of at a loss on what to do.</p>
     </div>
     <div class="marquee-container">
         <marquee class="marquee" behavior="scroll" direction="left" scrollamount="5">hi :3</marquee>
