--- a/contact.html
+++ b/contact.html
@@ -85,8 +85,8 @@
     <div class="container">
         <h1>contact</h1>
         <div class="contact-info">
-            <p>email: wiitown39@gmail.com</p>
-            <p>github: <a href="https://github.com/wiitown" target="_blank">wiitown</a></p>
+            <p>Email: contact@huxpmusic.com</p>
+            <p>GitHub: <a href="https://github.com/wiitown" target="_blank">wiitown</a></p>
         </div>
         <p>The Wiitown website is a fan project and is not affiliated with or endorsed by Nintendo. All trademarks, service marks, trade names, trade dress, product names, and logos appearing on the site are the property of their respective owners, including the Wii name, logo, and any related images or content. All rights to these materials are reserved by their respective owners.</p>
     </div>
